--- a/ZSMDP/.classpath
+++ b/ZSMDP/.classpath
@@ -27,5 +27,10 @@
 	<classpathentry kind="lib" path="C:/Users/goran/Desktop/MDP-projektni/ZSMDP/javafx-sdk-15.0.1/lib/javafx.swing.jar"/>
 	<classpathentry kind="lib" path="C:/Users/goran/Desktop/MDP-projektni/ZSMDP/javafx-sdk-15.0.1/lib/javafx.web.jar"/>
 	<classpathentry kind="lib" path="C:/Users/goran/Desktop/MDP-projektni/ZSMDP/javafx-sdk-15.0.1/lib/javafx-swt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/goran/Desktop/jar_files/lib/amqp-client-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/goran/Desktop/jar_files/lib/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="C:/Users/goran/Desktop/jar_files/lib/slf4j-simple-1.7.22.jar"/>
+	<classpathentry kind="lib" path="lib/commons-net-3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/goran/Desktop/jar_files/commons-net-3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
