--- a/ZSMDP/.settings/org.eclipse.core.resources.prefs
+++ b/ZSMDP/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/controllers/AddTimeController.java=UTF-8
 encoding//src/controllers/LoginController.java=UTF-8
+encoding//src/controllers/ZSMDPController.java=UTF-8
 encoding//src/model/User.java=UTF-8
 encoding//src/service/LoginService.java=UTF-8
 encoding//src/service/LoginServiceService.java=UTF-8
