--- a/ZSMDP/.settings/org.eclipse.core.resources.prefs
+++ b/ZSMDP/.settings/org.eclipse.core.resources.prefs
@@ -7,4 +7,5 @@ encoding//src/service/LoginService.java=UTF-8
 encoding//src/service/LoginServiceService.java=UTF-8
 encoding//src/service/LoginServiceServiceLocator.java=UTF-8
 encoding//src/service/LoginServiceSoapBindingStub.java=UTF-8
+encoding//src/view/LoginController.java=UTF-8
 encoding//src/view/login.fxml=UTF-8
